--- a/css/styles.css
+++ b/css/styles.css
@@ -107,3 +107,28 @@ label{
 td{
     padding: 5px;
 }
+
+button {
+    border: none;
+    cursor: pointer;
+}
+
+.details {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 5rem;
+    padding: 0 2rem ;
+}
+
+.det-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+}
+
+ion-icon {
+    font-size: 30px;
+    color: red;
+  }
